fixed the whitespace below the footer in the desktop view (caused my margin-top of header)

--- a/css/index.css
+++ b/css/index.css
@@ -89,8 +89,8 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: baseline;
-    margin: 10px auto;
-    padding: 10px 0;
+    margin: 0 auto;
+    padding: 20px 0;
 }
 
 header nav {
